# investmentagent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-public-watchlist.yml  pages.yml
docs/: index.md
docs/data/performance/: ledger.json
docs/performance/: index.md  latest.md
docs/reports/: 2026-05-10.md  latest.md
docs/reports/long-term/: 2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-06-01.md  latest.md
docs/reports/trading/: 2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-06-01.md  latest.md
docs/superpowers/plans/: 2026-05-09-investmentagent-implementation.md  2026-05-09-openclaw-agent-implementation.md  2026-05-10-finimpulse-fundamentals-implementation.md  (+14 more)
src/investmentagent/: cli.py  fundamentals.py  long_term_quality.py  market_calendar.py  models.py  performance.py  providers.py  renderers.py  reports.py  scoring.py
src/openclaw/: cli.py  models.py  providers.py  renderers.py  reports.py  scoring.py
tests/: test_cli.py  test_daily_public_workflow.py  test_fundamentals.py  test_long_term_quality.py  test_market_calendar.py  test_models.py  test_package.py  test_performance.py  test_providers.py  test_reports.py  test_scoring.py
(+18 files in other folders)
