[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investmentagent"
version = "0.1.0"
description = "CLI-first Nordic small/mid-cap investing research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
investmentagent = "investmentagent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
investmentagent = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
